small fixes: + fixed issue with cancel link redirect on create new task + fixed font color on navbar-inverse + removed jumbotron opacity behind text on home page

--- a/src/main/webapp/front-end/src/styles/app/home.less
+++ b/src/main/webapp/front-end/src/styles/app/home.less
@@ -1,5 +1,5 @@
 .jumbotron {
   &.jumbotron-home {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0);
   }
 }
