--- a/src/main/webapp/front-end/src/styles/navbar.less
+++ b/src/main/webapp/front-end/src/styles/navbar.less
@@ -11,6 +11,6 @@
   }
 }
 
-.navbar-inverse {
+.navbar-inverse .logo-font{
   color: @brand-white;
 }
